--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,25 @@
+machine:
+  python:
+    version: 2.7.3
+  services:
+    - docker
+
+dependencies:
+  pre:
+    - pip install awscli
+    - docker build -t mountain-pass/activemq-chronicler:$CIRCLE_SHA1 .
+
+test:
+  post:
+    - docker run -d -p 9000:9000 -e "SECRET_KEY_BASE=abcd1234" mountain-pass/activemq-chronicler:$CIRCLE_SHA1; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:9000
+
 deployment:
-  production:
-    branch: production
+  activemq-chronicler:
+    branch: master
     commands:
       - gradle uploadArchives
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - ./deploy.sh $CIRCLE_SHA1
+      
       
