--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ machine:
 dependencies:
   pre:
     - pip install awscli
+    - gradle build
     - docker build -t mountain_pass/activemq-chronicler:$CIRCLE_SHA1 .
 
 test:
